# python-cython-c-extesion-speed-test

./: .gitignore  README.en.md  README.md  c_speed_test.pyi  cython_speed_test.pyi  main.py  pyproject.toml  setup.py
src/: c_speed_test.c  cython_speed_test.pyx
