[project]
name = "python-cython-c-extesion-speed-test"
version = "0.1.0"
description = "A Testing to compare speed of python,cython and c extesion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.3",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "cython >= 0.29"]
build-backend = "setuptools.build_meta"

